sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var n:Int=getNombreValeurs
  var ecart:Int=n
  var compteur:Boolean=true
  while (compteur){
    compteur=false
    if (ecart>1) {
      ecart = (ecart.toDouble/1.3).toInt
    }
    var i:Int=0
    while ((i+ecart)<n){
      if (!plusPetit(i,(i+ecart)){
        echange(i,(i+ecart))
        compteur=true
      }
      i=i+1
    }
  }
}